# FinSight-AI

./: .gitignore  README.md
backend/: config.py  database.py  main.py  pyproject.toml  requirements.txt  tts_service.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
